--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 <div class="preloader-inner position-relative">
 <div class="preloader-circle"></div>
 <div class="preloader-img pere-text">
-<img src="<%=asset_path('loder.png')%>" alt="">
+<img src="<%=asset_path('loder')%>" alt="">
 </div>
 </div>
 </div>
@@ -44,13 +44,13 @@
 <div class="header-bottom header-sticky">
 
 <div class="logo d-none d-lg-block">
-<a class="home" style="cursor: pointer;"><img src="<%=asset_path('logo.png')%>" alt=""></a>
+<a class="home" style="cursor: pointer;"><img src="<%=asset_path('logo')%>" alt=""></a>
 </div>
 <div class="container">
 <div class="menu-wrapper">
 
 <div class="logo logo2 d-block d-lg-none">
-<a class="home" style="cursor: pointer"><img src="<%=asset_path('logo.png')%>" alt=""></a>
+<a class="home" style="cursor: pointer"><img src="<%=asset_path('logo')%>" alt=""></a>
 </div>
 
 <div class="main-menu d-none d-lg-block">
@@ -95,7 +95,7 @@
 </div>
 <div class="col-xl-6 col-lg-5">
 <div class="hero-man d-none d-lg-block f-right" data-animation="jello" data-delay=".4s">
-<img src="<%=asset_path('heroman.png')%>" alt="">
+<img src="<%=asset_path('heroman')%>" alt="">
 </div>
 </div>
 </div>
@@ -117,7 +117,7 @@
 </div>
 <div class="col-xl-6 col-lg-5">
 <div class="hero-man d-none d-lg-block f-right" data-animation="jello" data-delay=".4s">
-<img src="<%=asset_path('heroman.png')%>" alt="">
+<img src="<%=asset_path('heroman')%>" alt="">
 </div>
 </div>
 </div>
@@ -128,7 +128,7 @@
 
 
 
-<div class="count-down-area pt-90 pb-60 section-bg" data-background="<%=asset_path('section_bg01.png')%>">
+<div class="count-down-area pt-90 pb-60 section-bg" data-background="<%=asset_path('section_bg01')%>">
 <div class="container">
 <div class="row justify-content-center">
 <div class="col-lg-12 col-md-12">
@@ -198,7 +198,7 @@
 
 <div class="single-course mb-40">
 <div class="course-img">
-<img src="<%=asset_path('popular_sub1.png')%>" alt="">
+<img src="<%=asset_path('popular_sub1')%>" alt="">
 </div>
 <div class="course-caption">
 <div class="course-cap-top">
@@ -212,7 +212,7 @@
 
 <div class="single-course mb-40">
 <div class="course-img">
-<img src="<%=asset_path('popular_sub2.png')%>" alt="">
+<img src="<%=asset_path('popular_sub2')%>" alt="">
 </div>
 <div class="course-caption">
 <div class="course-cap-top">
@@ -226,7 +226,7 @@
 
 <div class="single-course mb-40">
 <div class="course-img">
-<img src="<%=asset_path('p1.jpeg')%>" alt="">
+<img src="<%=asset_path('p1')%>" alt="">
 </div>
 <div class="course-caption">
 <div class="course-cap-top">
@@ -266,10 +266,10 @@
 
 <div class="about-img ">
 <div class="about-font-img d-none d-lg-block">
-<img src="<%=asset_path('about2.png')%>" alt="">
+<img src="<%=asset_path('about2')%>" alt="">
 </div>
 <div class="about-back-img ">
-<img src="<%=asset_path('about1.png')%>" alt="">
+<img src="<%=asset_path('about1')%>" alt="">
 </div>
 </div>
 </div>
