--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3388,7 +3388,7 @@ width: 125px;}
   padding: 0 !important;
 }
 .slider-height {
-  background-image: url(/assets/h1_hero.png);
+  background-image: url(https://i.ibb.co/PMXPCc6/h1-hero.png);
   min-height: 840px;
   background-repeat: no-repeat;
   background-position: center center;
