--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -313,9 +313,9 @@ Copyright ©2020 All rights reserved VaradaAcademy.com</a>
 </div>
 <script type="text/javascript">
 	$('.home').click(function(){
-		window.location="http://localhost:3000";
+		window.location="http://varadaacademy.com";
 	});
 	$('.about').click(function(){
-		window.location="http://localhost:3000#about";
+		window.location="http://varadaacademy.com#about";
 	});
 </script>
