--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,10 +19,8 @@
 
 <div class="header-left-social">
 <ul class="header-social">
-<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-<li><a href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a></li>
-<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-<li> <a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+<li><a href="https://www.facebook.com/mahesh.gaonkar.5811"><i class="fab fa-facebook-f"></i></a></li>
+
 </ul>
 </div>
 <div class="container">
