--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -294,7 +294,7 @@
 <li>(+91) - 9449414356</li>
 </ul>
 <p>
-Copyright ©2020 All rights reserved VaradaAcademy.com</a>
+Copyright ©2020 All rights reserved Varada Academy</a>
 </p>
 </div>
 </div>
