--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,12 +56,20 @@
 <ul id="navigation">
 <li><a class="home" style="cursor: pointer">Home</a></li>
 <li><a class="about" style="cursor: pointer">About</a></li>
-
+<li><a class="exam" style="cursor: pointer">Exam</a></li>
 
 </ul>
 </nav>
 </div>
+<div class="main-menu d-block d-lg-none">
+<nav>
+<ul id="navigation">
 
+<li><a class="exam" style="cursor: pointer">Exam</a></li>
+
+</ul>
+</nav>
+</div>
 <div class="header-search d-none d-lg-block">
 
 </div>
@@ -315,5 +323,8 @@ Copyright ©2020 All rights reserved Varada Academy</a>
 	});
 	$('.about').click(function(){
 		window.location="http://varadaacademy.com#about";
+	});
+	$('.exam').click(function(){
+		window.location="http://exam.varadaacademy.com";
 	});
 </script>
